[package]
name = "nekoprint"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekoprint"
readme = "README.md"
description = "*"
keywords = ["print"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekoprint"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[lib]
proc-macro = true

[dependencies]
syn =  { version = "2", features = ["full"]}
quote = '1'
proc-macro2 =  '1'
mokuya = "0"
chrono = "0"
colorful = "0"
tokio = { version = "1", features = ["full"] }
kenzu = "0"
