[package]
name = "nekoprint-imports"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekoprint"
readme = "README.md"
description = "nekoprint is a powerful procedural macro for Rust that automatically generates printing methods for a struct's fields and the entire struct itself. It lets you create fluid, asynchronous logs with different severity levels using a simple, chained syntax. This library is ideal for debugging, monitoring, and diagnostics in Rust applications, especially those using async/await."
keywords = ["logging", "print", "colors", "neko", "log"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekoprint"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[features]

[dependencies]
chrono = { version = "0"} 
colorful = { version = "0"}
tokio = "1"